--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node": "^19.0.0",
+    "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run app",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch json/shopping.json --port 3001",
-    "app": "concurrently \"npm start\" \"npm run server\""
+    "server": "nodemon server/index.js",
+    "client": "react-scripts start",
+    "app": "concurrently \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": [
